@@ -138,7 +138,7 @@ public:
   bool bool_value (bool warn = false) const
   {
     if (xisnan (scalar))
-      error ("invalid conversion from NaN to logical");
+      gripe_nan_to_logical_conversion ();
     else if (warn && scalar != 0.0 && scalar != 1.0)
       gripe_logical_conversion ();
 
@@ -148,7 +148,7 @@ public:
   boolNDArray bool_array_value (bool warn = false) const
   {
     if (xisnan (scalar))
-      error ("invalid conversion from NaN to logical");
+      gripe_nan_to_logical_conversion ();
     else if (warn && scalar != 0.0 && scalar != 1.0)
       gripe_logical_conversion ();
 
