@@ -225,7 +225,7 @@ boolNDArray
 octave_matrix::bool_array_value (bool warn) const
 {
   if (matrix.any_element_is_nan ())
-    error ("invalid conversion from NaN to logical");
+    gripe_nan_to_logical_conversion ();
   else if (warn && matrix.any_element_not_one_or_zero ())
     gripe_logical_conversion ();
 
@@ -385,7 +385,7 @@ octave_matrix::convert_to_str_internal (bool, bool, char type) const
 
       if (xisnan (d))
         {
-          ::error ("invalid conversion from NaN to character");
+          gripe_nan_to_character_conversion ();
           return retval;
         }
       else
